# photobooth

./: CMakeLists.txt  README.md  build.sh  main.cpp
data/config/: config.yml
data/programs/: crio  hot  manual  pr1  pr2  pr3  pr4  pr5  pr6  pr8
data/scripts/: config.sh  video.sh
inc/: Button.h  ConfigReader.h  Control.h  Element.h  GUI.h  Image.h  Programs.h  Screen.h  Touch.h  TrackBar.h  Utils.h  Video.h
src/: Button.cpp  ConfigReader.cpp  Control.cpp  Element.cpp  GUI.cpp  Image.cpp  Programs.cpp  Screen.cpp  Touch.cpp  TrackBar.cpp  Utils.cpp  Video.cpp
